@@ -219,6 +219,7 @@ from beancount.core import getters
 from beancount.core import flags
 from beancount.ops import prices
 from beancount.utils import misc_utils
+from beancount.utils import date_utils
 
 
 def sum_balances_for_accounts(balance, entry, accounts):
@@ -804,7 +805,6 @@ def compute_returns_with_regexp(entries, options_map,
 
 
 def main():
-    parse_date = lambda s: parse_datetime(s).date()
     parser = argparse.ArgumentParser()
 
     parser.add_argument('filename', help='Ledger filename')
@@ -829,12 +829,14 @@ def main():
     parser.add_argument('-v', '--verbose', action='store_true',
                         help="Output detailed processing information. Useful for debugging")
 
-    parser.add_argument('--date-begin', '--begin-date', action='store', type=parse_date,
+    parser.add_argument('--date-begin', '--begin-date',
+                        action='store', type=date_utils.parse_date_liberally,
                         default=None,
                         help=("Beginning date of the period to compute returns over "
                               "(default is the first related directive)"))
 
-    parser.add_argument('--date-end', '--end-date', action='store', type=parse_date,
+    parser.add_argument('--date-end', '--end-date',
+                        action='store', type=date_utils.parse_date_liberally,
                         default=None,
                         help=("End date of the period to compute returns over "
                               "(default is the last related directive)"))
